[gd_scene load_steps=12 format=2]

[ext_resource path="res://Wallpaper/Dino.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/System/Desktop.gd" type="Script" id=2]
[ext_resource path="res://SpriteSheetTheme.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/System/Clock.gd" type="Script" id=4]
[ext_resource path="res://Scripts/System/InfoBar.gd" type="Script" id=5]
[ext_resource path="res://Icons/OS.png" type="Texture" id=6]
[ext_resource path="res://Icons/OS_Pressed.png" type="Texture" id=7]
[ext_resource path="res://Icons/OS_Hover.png" type="Texture" id=8]
[ext_resource path="res://Scripts/System/OSButton.gd" type="Script" id=9]
[ext_resource path="res://Scripts/System/Date.gd" type="Script" id=10]
[ext_resource path="res://Fonts/InfoBarFont.tres" type="DynamicFont" id=11]

[node name="OS" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desktop" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wallpaper" type="NinePatchRect" parent="Desktop"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="DesktopIcons" type="ItemList" parent="Desktop"]
anchor_right = 47.723
anchor_bottom = 26.802
margin_left = 18.0
margin_top = 28.0
margin_right = -10.9199
margin_bottom = -10.08
theme = ExtResource( 3 )
max_text_lines = 2
auto_height = true
max_columns = 100
icon_mode = 0
fixed_icon_size = Vector2( 64, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBar" type="Control" parent="Desktop"]
margin_right = 1918.0
margin_bottom = 17.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backing" type="ColorRect" parent="Desktop/InfoBar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OSButton" type="TextureButton" parent="Desktop/InfoBar"]
margin_left = 3.0
margin_top = 0.45
margin_right = 67.0
margin_bottom = 41.45
rect_scale = Vector2( 0.4, 0.4 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="Label" parent="Desktop/InfoBar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -259.0
margin_top = -6.0
margin_right = -111.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 11 )
text = "00/00/000"
align = 1
valign = 1
clip_text = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="Label" parent="Desktop/InfoBar"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -121.5
margin_top = -6.25
margin_right = -15.5
margin_bottom = 21.75
custom_fonts/font = ExtResource( 11 )
text = "00:00:00pm"
align = 1
valign = 1
clip_text = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_activated" from="Desktop/DesktopIcons" to="." method="_on_ItemList_item_activated"]
[connection signal="nothing_selected" from="Desktop/DesktopIcons" to="." method="_on_DesktopIcons_nothing_selected"]
[connection signal="toggled" from="Desktop/InfoBar/OSButton" to="Desktop/InfoBar/OSButton" method="_on_OSButton_toggled"]
